# internal/api/openapi.yaml
@@ -15,16 +15,17 @@ paths:
           required: false
           schema:
             type: integer
-            minimum: 0
-            maximum: 1000
+            x-go-type: int32
+            minimum: 1
             default: 20
         - name: page
           in: query
           required: false
           schema:
             type: integer
-            minimum: 0
-            default: 0
+            x-go-type: int32
+            minimum: 1
+            default: 1
         - name: search
           in: query
           required: false
@@ -50,7 +51,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/error'
     post:
-
       summary: create new subgroup
       requestBody:
         required: true
@@ -103,6 +103,7 @@ paths:
           required: true
           schema:
             type: integer
+            x-go-type: int32
       responses:
         '200':
           description: return subgroup
@@ -135,7 +136,7 @@ paths:
           required: true
           schema:
             type: integer
-
+            x-go-type: int32
       summary: patch subgroup information
       requestBody:
         required: true
@@ -193,15 +194,11 @@ paths:
           required: true
           schema:
             type: integer
-
+            x-go-type: int32
       summary: delete subgroup
       responses:
         '200':
           description: subgroup deleted
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/subgroup'
         '400':
           description: bad request
           content:
@@ -241,16 +238,17 @@ paths:
           required: false
           schema:
             type: integer
-            minimum: 0
-            maximum: 1000
+            x-go-type: int32
+            minimum: 1
             default: 20
         - name: page
           in: query
           required: false
           schema:
             type: integer
-            minimum: 0
-            default: 0
+            x-go-type: int32
+            minimum: 1
+            default: 1
         - name: search
           in: query
           required: false
@@ -329,6 +327,7 @@ paths:
           required: true
           schema:
             type: integer
+            x-go-type: int32
       responses:
         '200':
           description: return teacher
@@ -361,6 +360,7 @@ paths:
           required: true
           schema:
             type: integer
+            x-go-type: int32
 
       summary: patch teacher information
       requestBody:
@@ -419,15 +419,12 @@ paths:
           required: true
           schema:
             type: integer
+            x-go-type: int32
 
       summary: delete teacher
       responses:
         '200':
           description: teacher deleted
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/teacher'
         '400':
           description: bad request
           content:
@@ -467,16 +464,17 @@ paths:
           required: false
           schema:
             type: integer
-            minimum: 0
-            maximum: 1000
+            x-go-type: int32
+            minimum: 1
             default: 20
         - name: page
           in: query
           required: false
           schema:
             type: integer
-            minimum: 0
-            default: 0
+            x-go-type: int32
+            minimum: 1
+            default: 1
         - name: search
           in: query
           required: false
@@ -555,6 +553,7 @@ paths:
           required: true
           schema:
             type: integer
+            x-go-type: int32
       responses:
         '200':
           description: return location
@@ -587,6 +586,7 @@ paths:
           required: true
           schema:
             type: integer
+            x-go-type: int32
 
       summary: patch location information
       requestBody:
@@ -645,15 +645,11 @@ paths:
           required: true
           schema:
             type: integer
-
+            x-go-type: int32
       summary: delete location
       responses:
         '200':
           description: location deleted
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/location'
         '400':
           description: bad request
           content:
@@ -693,16 +689,17 @@ paths:
           required: false
           schema:
             type: integer
-            minimum: 0
-            maximum: 1000
+            x-go-type: int32
+            minimum: 1
             default: 20
         - name: page
           in: query
           required: false
           schema:
             type: integer
-            minimum: 0
-            default: 0
+            x-go-type: int32
+            minimum: 1
+            default: 1
         - name: search
           in: query
           required: false
@@ -781,6 +778,7 @@ paths:
           required: true
           schema:
             type: integer
+            x-go-type: int32
       responses:
         '200':
           description: return subject
@@ -813,6 +811,7 @@ paths:
           required: true
           schema:
             type: integer
+            x-go-type: int32
 
       summary: patch subject information
       requestBody:
@@ -871,15 +870,11 @@ paths:
           required: true
           schema:
             type: integer
-
+            x-go-type: int32
       summary: delete subject
       responses:
         '200':
           description: subject deleted
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/subject'
         '400':
           description: bad request
           content:
@@ -919,16 +914,17 @@ paths:
           required: false
           schema:
             type: integer
-            minimum: 0
-            maximum: 1000
+            x-go-type: int32
+            minimum: 1
             default: 20
         - name: page
           in: query
           required: false
           schema:
             type: integer
-            minimum: 0
-            default: 0
+            x-go-type: int32
+            minimum: 1
+            default: 1
         - name: search
           in: query
           required: false
@@ -1007,6 +1003,7 @@ paths:
           required: true
           schema:
             type: integer
+            x-go-type: int32
       responses:
         '200':
           description: return timetable
@@ -1039,6 +1036,7 @@ paths:
           required: true
           schema:
             type: integer
+            x-go-type: int32
 
       summary: patch timetable information
       requestBody:
@@ -1097,15 +1095,11 @@ paths:
           required: true
           schema:
             type: integer
-
+            x-go-type: int32
       summary: delete timetable
       responses:
         '200':
           description: timetable deleted
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/timetable'
         '400':
           description: bad request
           content:
@@ -1145,6 +1139,7 @@ paths:
           required: true
           schema:
             type: integer
+            x-go-type: int32
         - name: format
           in: query
           required: false
@@ -1242,7 +1237,11 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
+            type: string
+            format: uuid
+            x-go-type: uuid.UUID
+            x-go-type-import:
+              path: github.com/google/uuid
       responses:
         '200':
           description: return lesson
@@ -1274,8 +1273,11 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-
+            type: string
+            format: uuid
+            x-go-type: uuid.UUID
+            x-go-type-import:
+              path: github.com/google/uuid
       summary: patch lesson information
       requestBody:
         required: true
@@ -1333,15 +1335,14 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-
+            type: string
+            format: uuid
+            x-go-type: uuid.UUID
+            x-go-type-import:
+              path: github.com/google/uuid
       responses:
         '200':
           description: lesson deleted
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/lesson'
         '400':
           description: bad request
           content:
@@ -1379,16 +1380,17 @@ paths:
         required: false
         schema:
           type: integer
-          minimum: 0
-          maximum: 1000
+          x-go-type: int32
+          minimum: 1
           default: 20
       - name: page
         in: query
         required: false
         schema:
           type: integer
-          minimum: 0
-          default: 0
+          x-go-type: int32
+          minimum: 1
+          default: 1
     get:
       summary: get errors in data assignments
       responses:
@@ -1418,6 +1420,7 @@ paths:
           required: true
           schema:
             type: integer
+            x-go-type: int32
       summary: get error in data assignments
       responses:
         '200':
@@ -1510,15 +1513,20 @@ components:
       properties:
         total_pages:
           type: integer
+          x-go-type: int32
         page:
           type: integer
+          x-go-type: int32
     subgroup:
       type: object
       required:
+        - id
         - name
       properties:
         id:
           type: integer
+          minimum: 1
+          x-go-type: int32
         name:
           type: string
     listSubgroups:
@@ -1536,10 +1544,13 @@ components:
     teacher:
       type: object
       required:
+        - id
         - name
       properties:
         id:
           type: integer
+          minimum: 1
+          x-go-type: int32
         name:
           type: string
     listTeachers:
@@ -1557,10 +1568,13 @@ components:
     location:
       type: object
       required:
+        - id
         - name
       properties:
         id:
           type: integer
+          minimum: 1
+          x-go-type: int32
         name:
           type: string
     listLocations:
@@ -1578,10 +1592,13 @@ components:
     subject:
       type: object
       required:
+        - id
         - name
       properties:
         id:
           type: integer
+          minimum: 1
+          x-go-type: int32
         name:
           type: string
     listSubjects:
@@ -1599,12 +1616,15 @@ components:
     timetable:
       type: object
       required:
+        - id
         - name
         - start_date
         - end_date
       properties:
         id:
           type: integer
+          minimum: 1
+          x-go-type: int32
         name:
           type: string
         start_date:
@@ -1638,6 +1658,7 @@ components:
     lesson:
       type: object
       required:
+        - id
         - subject
         - category
         - day
@@ -1651,20 +1672,27 @@ components:
         id:
           type: string
           format: uuid
+          x-go-type: uuid.UUID
+          x-go-type-import:
+            path: github.com/google/uuid
         subject:
           $ref: '#/components/schemas/subject'
         category:
           type: string
         day:
           type: integer
+          x-go-type: int32
         time_start:
           type: integer
+          x-go-type: int32
           description: "time of lesson start in minutes from the beginning of the day"
         time_end:
           type: integer
+          x-go-type: int32
           description: "time of lesson end in minutes from the beginning of the day"
         repeat_rule:
           type: integer
+          x-go-type: int32
           minimum: 0
           maximum: 2
         timetable:
@@ -1679,19 +1707,16 @@ components:
             $ref: '#/components/schemas/subgroup'
     error:
       type: object
+      required:
+        - code
       properties:
+        code:
+          type: string
+          enum: [CODE_BAD_REQUEST, CODE_UNAUTHORIZED, CODE_FORBIDDEN, CODE_WRONG_ARCHIVE, CODE_WRONG_XLSX, CODE_CANNOT_SERIALIZE_ICS, CODE_DB_ERROR]
         message:
           type: string
-        timetable_id:
-          type: integer
-        location_id:
-          type: integer
-        lesson_id:
-          type: integer
-        subgroup_id:
-          type: integer
-        teacher_id:
-          type: integer
+        file:
+          type: string
     listErrors:
       type: object
       properties:
